--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <p>
-  <a href="https://unmandao.github.io/3-publicaciones/USantaTecla/3-disenyo/0-itinerario/index.html">0 - Disciplina de diseño</a> 
+  <a href="./USantaTecla/3-disenyo/0-itinerario/index.html">0 - Disciplina de diseño</a> 
 </p>  
 <p>
-  <a href="https://unmandao.github.io/3-publicaciones/USantaTecla/3-disenyo/1-disenyo/index.html">1 - Diseño</a> 
+  <a href="./USantaTecla/3-disenyo/1-disenyo/index.html">1 - Diseño</a> 
 </p>
 <p>
-  <a href="https://unmandao.github.io/3-publicaciones/USantaTecla/3-disenyo/2-disenyoModular/index.html">2 - Diseño modular</a> 
+  <a href="./USantaTecla/3-disenyo/2-disenyoModular/index.html">2 - Diseño modular</a> 
 </p>
 <p>
-  <a href="https://unmandao.github.io/3-publicaciones/USantaTecla/3-disenyo/3-disenyoOrientadoObjetos/index.html">Diseño Orientado a Objetos</a> 
+  <a href="./USantaTecla/3-disenyo/3-disenyoOrientadoObjetos/index.html">Diseño Orientado a Objetos</a> 
 </p>
