--- a/index.html
+++ b/index.html
@@ -10,3 +10,6 @@
 <p>
   <a href="./USantaTecla/3-disenyo/3-disenyoOrientadoObjetos/index.html">Diseño Orientado a Objetos</a> 
 </p>
+<p>
+  <a href="./USantaTecla/tech-uml/index.html">tech-uml</a> 
+</p>
