--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
 <p>
   <a href="./USantaTecla/5-rup/6-gestion/index.html">6-gestion</a> 
 </p>  
+<h2>USantaTecla-6-agiles</h2>
+<p>
+  <a href="./USantaTecla/6-agiles/0-itinerario/index.html">0-itinerario</a> 
+</p>
+<p>
+  <a href="./USantaTecla/6-agiles/1-refactoring/index.html">1-refactoring</a> 
+</p>
+<p>
+  <a href="./USantaTecla/6-agiles/2-historiasUsuario/index.html">2-historiasUsuario</a> 
+</p>
+<p>
+  <a href="./USantaTecla/6-agiles/3-eXteProgramming/index.html">3-eXteProgramming</a> 
+</p>
+<p>
+  <a href="./USantaTecla/6-agiles/4-scrum/index.html">4-scrum</a> 
+</p>
 <h2>USantaTecla-tech</h2>
 <p>
   <a href="./USantaTecla/tech-uml/index.html">tech-uml</a> 
